@@ -16,19 +16,16 @@ setBackTitle ()
 
 }
 
-installDependanciesForInstallation ()
-{
-	${Echo} "Updating repositories and installing generic dependencies"
-	#${Echo} "Live logging can be seen by this command in another window: tail -f ${statusFile}"
-	eval ${distCmdU} &> >(tee -a ${statusFile}) 
-	eval ${distCmd1} &> >(tee -a ${statusFile})
-	${Echo} "Done."
-}
+
 
 patchFirewall()
 {
         #Replace firewalld with iptables (Centos7)
+	${Echo} "Working with Distro:${dist} with version: ${redhatDist}"
+        
         if [ "${dist}" == "centos" -a "${redhatDist}" == "7" ]; then
+		${Echo} "Updating firewall settings - changing from firewalld to iptables "
+		${Echo} "Detected ${dist} ${redhatDist}"
                 systemctl stop firewalld
                 systemctl mask firewalld
                 eval "yum -y install iptables-services" >> ${statusFile} 2>&1
@@ -36,38 +33,27 @@ patchFirewall()
                 systemctl start iptables
 
         elif [ "${dist}" == "redhat" -a "${redhatDist}" == "7" ]; then
+		${Echo} "Updating firewall settings - changing from firewalld to iptables "
+		${Echo} "Detected ${dist} ${redhatDist}"
                 systemctl stop firewalld
                 systemctl mask firewalld
                 eval "yum -y install iptables-services" >> ${statusFile} 2>&1
                 systemctl enable iptables
                 systemctl start iptables
 
-#	elif [ "${dist}" == "sles" ]; then
-		#Integrate SuSE_Firewall or replace	
-
 	elif [ "${dist}" == "ubuntu" ]; then
+		${Echo} "Detected ${dist} ${redhatDist}"
+
 		DEBIAN_FRONTEND=noninteractive apt-get install -y iptables-persistent	
         fi
-	
+
 }
 
 fetchJavaIfNeeded ()
 
 {
 	${Echo} "setJavaHome deprecates fetchJavaIfNeeded and ensures latest java is used"
-	# install java if needed
-	#javaBin=`which java 2>/dev/null`
-	#if [ ! -s "${javaBin}" ]; then
-	#	eval ${distCmd2}
-	#	eval ${distCmd3}
-		
-	#	javaBin=`which java 2>/dev/null`
-	#fi
-	#if [ ! -s "${javaBin}" ]; then
-	#	${Echo} "No java could be found! Install a working JRE and re-run this script."
-	#	${Echo} "Try: ${distCmd2} and ${distCmd3}"
-	#	cleanBadInstall
-	#fi
+	
 
 }
 
@@ -105,87 +91,205 @@ setVarIdPScope ()
 	idpScope="${freeRADIUS_realm}"
 }
 
-setJavaHome () {
+updateJavaAlternatives() {
+	for i in `ls $JAVA_HOME/bin/`; do
+		rm -f /var/lib/alternatives/$i
+		update-alternatives --install /usr/bin/$i $i $JAVA_HOME/bin/$i 100
+		update-alternatives --set $i $JAVA_HOME/bin/$i
+	done
+}
 
-        # force the latest java onto the system to ensure latest is available for all operations.
-        # including the calculation of JAVA_HOME to be what this script sees on the system, not what a stale environment may have
+installOracleJava () {
+	javaType=$1
 
-        # June 23, 2015, altering java detection behaviour to be more platform agnostic
+	if [ "${javaType}" != "jdk" ]; then
+		javaType="jre"
+	fi
 
-	if [ -L "/usr/java/default" -a -d "/usr/java/jre${javaVer}" ]; then
-		
-                export JAVA_HOME=/usr/java/default
-                ${Echo} "Detected Java allready installed in ${JAVA_HOME}."
+	javaSrc="${javaType}-${javaName}-linux-x64.tar.gz"
+	javaDownloadLink="http://download.oracle.com/otn-pub/java/jdk/${javaBuildName}/${javaSrc}"
+	jceDownloadLink="http://download.oracle.com/otn-pub/java/jce/${javaMajorVersion}/${jcePolicySrc}"
 
-				# return 0  This is not accurate, we need to prepare the host for java settings regardless.
+	# force the latest java onto the system to ensure latest is available for all operations.
+	# including the calculation of JAVA_HOME to be what this script sees on the system, not what a stale environment may have
+
+	if [ -L "/usr/java/default" -a -d "/usr/java/${javaType}${javaVer}" ]; then
+		export JAVA_HOME=/usr/java/default
+		${Echo} "Detected Java allready installed in ${JAVA_HOME}."
+
+		if [ -z "`readlink -e /usr/bin/java | grep \"${javaType}${javaVer}\"`" ]; then
+			${Echo} "${JAVA_HOME} not used as default java. Updating system links.".
+			updateJavaAlternatives
+		fi
+	else
+		${Echo} "Oracle java not detected."
+
+		unset JAVA_HOME
+
+		# Download if needed and install from src
+		${Echo} "Downloading java."
+		if [ ! -s "${downloadPath}/${javaSrc}" ]; then
+			${fetchCmd} ${downloadPath}/${javaSrc} -j -L -H "Cookie: oraclelicense=accept-securebackup-cookie" ${javaDownloadLink} 2>&1
+		fi
+
+		${Echo} "Unpacking java and setting up symlinks."
+		if [ ! -d "/usr/java" ]; then
+			mkdir /usr/java
+		fi
+		tar xzf ${downloadPath}/${javaSrc} -C /usr/java/
+		unpackRet=$?
+
+		if [ "${unpackRet}" -ne 0 ]; then
+			${Echo} "Unpacking java failed, aborting script."
+			rm -r /usr/java/${javaType}${javaVer}/
+			return 1
+		fi
+
+		if [ -d "/usr/java/latest" ]; then
+			mv /usr/java/latest /usr/java/latest.old
+		fi
+		if [ -s "/usr/java/latest" ]; then
+			rm -f /usr/java/latest
+		fi
+		ln -s /usr/java/${javaType}${javaVer}/ /usr/java/latest
+
+		if [ -d "/usr/java/default" ]; then
+			mv /usr/java/default /usr/java/default.old
+		fi
+		if [ -s "/usr/java/default" ]; then
+			rm -f /usr/java/default
+		fi
+		ln -s /usr/java/latest /usr/java/default
+
+		export JAVA_HOME="/usr/java/default"
+		export PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+		# Set the alternatives
+		updateJavaAlternatives
+
+		echo "***javahome is: ${JAVA_HOME}"
+	fi
+
+
+	# Regardless of origin, let's validate it's existence then ensure it's in our .bashrc and our path
+
+	${JAVA_HOME}/bin/java -version 2>&1
+	retval=$?
+
+	if [ "${retval}" -ne 0 ]; then
+		${Echo} "\n\n\nAn error has occurred in the configuration of the JAVA_HOME variable."
+		${Echo} "Please review the java installation log to see what went wrong."
+		return 1
 	else
 
-		${Echo} "Java not detected, downloading and installing.."
+		${Echo} "\n\n\nJAVA_HOME version verified as good."
+		jEnvString="export JAVA_HOME=${JAVA_HOME}"
 
-        unset JAVA_HOME
+		if [ -z "`grep 'JAVA_HOME' /root/.bashrc`" ]; then
 
-        #Install from src
-        javaSrc="jre-8u25-linux-x64.tar.gz"
-        if [ ! -s "${downloadPath}/${javaSrc}" ]; then
-                ${fetchCmd} ${downloadPath}/${javaSrc} -j -L -H "Cookie: oraclelicense=accept-securebackup-cookie"  https://download.oracle.com/otn-pub/java/jdk/8u25-b17/${javaSrc} >> ${statusFile} 2>&1
-        fi
-        if [ ! -d "/usr/java" ]; then
-		mkdir /usr/java
+			${Echo} "${jEnvString}" >> /root/.bashrc
+			${Echo} "\n\n\nJAVA_HOME added to end of /root/.bashrc"
+
+		else
+			if [ "`grep "export JAVA_HOME" /root/.bashrc | tail -n1`" != "${jEnvString}" ]; then
+				${Echo} "${jEnvString}" >> /root/.bashrc
+				${Echo} "\n\n\n***EXISTING JAVA_HOME DETECTED AND OVERRIDDEN!***"
+				${Echo} "\nA new JAVA_HOME has been appended to end of /root/.bashrc to ensure the latest javahome is used. Hand edit as needed\n\n"
+			fi
+
+		fi
+
+		# Ensure the java is in our execution path both in execution AND in the .bashrc
+
+		if [ -z "`grep PATH /root/.bashrc | grep \"${JAVA_HOME}/bin\"`" ]; then
+			${Echo} "export PATH=${PATH}:${JAVA_HOME}/bin" >> /root/.bashrc
+			${Echo} "\n\n\nUpdated PATH to add java bin dir at end of /root/.bashrc"
+			export PATH=${PATH}:${JAVA_HOME}/bin
+		fi
+
 	fi
-        tar xzf ${downloadPath}/${javaSrc} -C /usr/java/
-        ln -s /usr/java/jre${javaVer}/ /usr/java/latest
-        ln -s /usr/java/latest /usr/java/default
-        export JAVA_HOME="/usr/java/default"
-		export PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-        #Set the alternatives
-        for i in `ls $JAVA_HOME/bin/`; do rm -f /var/lib/alternatives/$i;update-alternatives --install /usr/bin/$i $i $JAVA_HOME/bin/$i 100; done
-        for i in `ls $JAVA_HOME/bin/`;do update-alternatives --set $i $JAVA_HOME/bin/$i; done
-
-        echo "***javahome is: ${JAVA_HOME}"
-        # validate java_home and ensure it runs as expected before going any further
-        
-    fi
-
-    	# Regardless of origin, let's validate it's existence then ensure it's in our .bashrc and our path
 
 
-        ${JAVA_HOME}/bin/java -version >> ${statusFile} 2>&1
-		retval=$?
+	JCETestCmd="java -classpath ${downloadPath} checkJCEStrength"
 
-        if [ "${retval}" -ne 0 ]; then
-                ${Echo} "\n\n\nAn error has occurred in the configuration of the JAVA_HOME variable."
-                ${Echo} "Please review the java installation and status.log to see what went wrong."
-                ${Echo} "Install is aborted until this is resolved."
-                cleanBadInstall
-                exit
-        else
+	${Echo} "Testing Java Cryptography Extensions"
+	JCETestResults=$(eval ${JCETestCmd})
 
-                ${Echo} "\n\n\n JAVA_HOME version verified as good."
-                jEnvString="export JAVA_HOME=${JAVA_HOME}"
+	if [ "${JCETestResults}" == "${JCEUnlimitedResponse}" ]; then
+		${Echo} "Java Cryptography Extensions alredy installed."
+	else
+		${Echo} "Setting Java Cryptography Extensions to unlimited strength"
 
-                 if [ -z "`grep 'JAVA_HOME' /root/.bashrc`" ]; then
+		# Backup originals
+		JCEBkp1="local_policy.jar"
+		JCEBkp2="US_export_policy.jar"
+		JCEBkp1Path="${JAVA_HOME}/lib/security/${JCEBkp1}"
+		JCEBkp2Path="${JAVA_HOME}/lib/security/${JCEBkp2}"
+		JCEBkpPostfix=`date +%F-%s`
+		${Echo} "Backing up ${JCEBkp1} and ${JCEBkp1} from ${JAVA_HOME} to ${Spath}"
+		if [ "${javaType}" == "jdk" ]; then
+			JCEBkp1Path="${JAVA_HOME}/jre/lib/security/${JCEBkp1}"
+			JCEBkp2Path="${JAVA_HOME}/jre/lib/security/${JCEBkp2}"
+		fi
+		cp ${JCEBkp1Path} ${Spath}/${JCEBkp1}-${JCEBkpPostfix}
+		cp ${JCEBkp2Path} ${Spath}/${JCEBkp2}-${JCEBkpPostfix}
 
-                         ${Echo} "${jEnvString}" >> /root/.bashrc
-                         ${Echo} "\n\n\n JAVA_HOME added to end of /root/.bashrc"
+		# Fetch new policy file
+		if [ ! -s "${downloadPath}/${jcePolicySrc}" ]; then
+			${Echo} "Fetching Java Cryptography Extensions from Oracle"
+			${fetchCmd} ${downloadPath}/${jcePolicySrc} -j -L -H "Cookie: oraclelicense=accept-securebackup-cookie" ${jceDownloadLink} 2>&1
+		fi
 
-                 else
+		# Extract locally into downloads directory
+		unzip -o ${downloadPath}/${jcePolicySrc} -d ${downloadPath}
+		jceUnpacRet=$?
+		if [ "${jceUnpacRet}" -ne "0" ]; then
+			${Echo} "**Unpacking Java Cryptography Extensions update failed!**"
+			${Echo} "**Install will succeed but you will not operate at full crypto strength **"
+			${Echo} "**Some Service Providers will fail to negotiate.**"
+			return 0
+		fi
 
-                         ${Echo} "${jEnvString}" >> /root/.bashrc
-                         ${Echo} "\n\n\n ***EXISTING JAVA_HOME DETECTED AND OVERRIDDEN!***"
-                         ${Echo} "\n A new JAVA_HOME has been appended to end of /root/.bashrc to ensure the latest javahome is used. Hand edit as needed\n\n"
+		# copy into place
+		${Echo} "Putting Java Cryptography Extensions from Oracle into ${JAVA_HOME}/lib/security/"
 
-                 fi
+		JCEWorkingDir="${downloadPath}/UnlimitedJCEPolicyJDK8"
+		cp ${JCEWorkingDir}/${JCEBkp1} ${JCEBkp1Path}
+		cp ${JCEWorkingDir}/${JCEBkp2} ${JCEBkp2Path}
 
-                 # Ensure the java is in our execution path both in execution AND in the .bashrc
-                 
-                 jEnvPathString="export PATH=${PATH}:${JAVA_HOME}/bin"
-                 ${Echo} "${jEnvPathString}" >> /root/.bashrc
-                 ${Echo} "\n\n\n Updated PATH to add java bin dir at end of /root/.bashrc"
+		${Echo} "Testing Java Cryptography Extensions"
+		JCETestResults=$(eval ${JCETestCmd})
 
-                 export PATH=${PATH}:${JAVA_HOME}/bin
+		if [ "${JCETestResults}" == "${JCEUnlimitedResponse}" ]; then
+			${Echo} "Java Cryptography Extensions update succeeded"
+		else
+			${Echo} "**Java Cryptography Extensions update failed! rolling back using backups**"
+			${Echo} "**Install will succeed but you will not operate at full crypto strength **"
+			${Echo} "**Some Service Providers will fail to negotiate.**"
 
-        fi
+			cp ${downloadPath}/${JCEBkp1}-${JCEBkpPostfix} ${JCEBkp1Path}
+			cp ${downloadPath}/${JCEBkp2}-${JCEBkpPostfix} ${JCEBkp2Path}
+		fi
+	fi
 
+	return 0
+}
+
+setJavaHome () {
+	# force the latest java onto the system to ensure latest is available for all operations.
+	# including the calculation of JAVA_HOME to be what this script sees on the system, not what a stale environment may have
+
+	# June 23, 2015, altering java detection behaviour to be more platform agnostic
+
+	installOracleJava
+	retval=$?
+
+	if [ "${retval}" -ne 0 ]; then
+		${Echo} "\n\n\nAn error has occurred in the configuration of the JAVA_HOME variable."
+		${Echo} "Please review the java installation and status.log to see what went wrong."
+		${Echo} "Install is aborted until this is resolved."
+		cleanBadInstall
+		exit
+	fi
 }
 
 setJavaCACerts ()
@@ -289,46 +393,7 @@ generatePasswordsForSubsystems ()
 
 }
 
-installEPEL() {
-	
-	if [ ! -z "`rpm -q epel-release | grep ' is not installed'`" ]; then
-			
-		${Echo} "Detected no EPEL and Jpackage, adding repos into /etc/yum.repos.d/ and updating them"	
 
-
-	cat > /etc/yum.repos.d/jpackage-generic-free.repo << EOF
-[jpackage-generic-free]
-name=JPackage generic free
-baseurl=http://ftp.heanet.ie/pub/jpackage/6.0/generic/free
-mirrorlist=http://www.jpackage.org/mirrorlist.php?dist=generic&type=free&release=6.0
-enabled=1
-gpgcheck=1
-gpgkey=http://www.jpackage.org/jpackage.asc
-EOF
-
-	cat > /etc/yum.repos.d/jpackage-generic-devel.repo << EOF
-[jpackage-generic-devel]
-name=JPackage Generic Developer
-baseurl=http://ftp.heanet.ie/pub/jpackage/6.0/generic/free
-mirrorlist=http://www.jpackage.org/mirrorlist.php?dist=generic&type=free&release=6.0
-enabled=1
-gpgcheck=1
-gpgkey=http://www.jpackage.org/jpackage.asc
-EOF
-
-	eval $redhatEpel >> ${statusFile} 2>&1
-
-else
-
-	${Echo} "Dected EPEL and JPackage EXIST on this system. Skipping this step as system already updated"
-fi
-
-
-}
-
-installOBS () {
-	 eval $slesMaven12 >> ${statusFile} 2>&1
-}
 
 setHostnames() {
 	FQDN=`hostname`
@@ -384,10 +449,6 @@ installEPTIDSupport ()
                         [ -f /etc/init.d/mysql ]
                         isInstalled=$?
 
-                elif [ "$dist" == "centos" -a "$redhatDist" == "6" ]; then
-                        [ -f /etc/init.d/mysqld ]
-                        isInstalled=$?
-
 		elif [ "${dist}" == "centos" -o "${dist}" == "redhat" ]; then
 			if [ "${redhatDist}" == "6" ]; then
 				[ -f /etc/init.d/mysqld ]
@@ -399,7 +460,6 @@ installEPTIDSupport ()
 					${Echo} "Detected no MySQL, adding repos into /etc/yum.repos.d/ and updating them"
 					mysqlOracleRepo="rpm -Uvh http://repo.mysql.com/mysql-community-release-el7.rpm"
 					eval $mysqlOracleRepo >> ${statusFile} 2>&1
-
 				else
 					${Echo} "Dected MySQL Repo EXIST on this system."
 
@@ -416,9 +476,10 @@ installEPTIDSupport ()
 
                         mysqldTest=`pgrep mysqld`
                         if [ -z "${mysqldTest}" ]; then
-                                if [ "${dist}" == "ubuntu" ]; then
+                                if [ ${dist} == "ubuntu" ]; then
                                         service mysql restart >> ${statusFile} 2>&1
                                 elif [ "${dist}" == "sles" ]; then
+					systemctl enable mysql
                                         service mysql restart >> ${statusFile} 2>&1
                                 else
                                         service mysqld restart >> ${statusFile} 2>&1
@@ -426,16 +487,16 @@ installEPTIDSupport ()
                         fi
                         # set mysql root password
                         tfile=`mktemp`
-                        if [ ! -f "${tfile}" ]; then
+                        if [ ! -f "$tfile" ]; then
                                 return 1
                         fi
-                        cat << EOM > ${tfile}
+                        cat << EOM > $tfile
 USE mysql;
 UPDATE user SET password=PASSWORD("${mysqlPass}") WHERE user='root';
 FLUSH PRIVILEGES;
 EOM
 
-                        mysql --no-defaults -u root -h localhost <${tfile}
+                        mysql --no-defaults -u root -h localhost <$tfile
                         retval=$?
                         # moved removal of MySQL command file to be in the if-then-else statement set below
 
@@ -450,7 +511,7 @@ EOM
                         fi
 
 
-                        if [ "${dist}" == "centos" -o "${dist}" == "redhat" ]; then
+			if [ "${dist}" == "centos" -o "${dist}" == "redhat" ]; then
                                 /sbin/chkconfig mysqld on
                         fi
                 fi
@@ -547,6 +608,16 @@ mkdir -p ${certpath}
 
 }
 
+fetchLDAPCertificates ()
+{
+	# Fetch ldap cert
+	${Echo} "Fetching LDAP Certificates for ldap-server.crt used in idp.properties"
+	for loopServer in ${ldapserver}; do
+		${Echo} "QUIT" | openssl s_client -connect ${loopServer}:636 2>/dev/null | sed -ne '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' >> ${certpath}/ldap-server.crt
+	done
+
+}
+
 installCertificates()
 
 {
@@ -581,11 +652,6 @@ ${Echo} "Fetching TCS CA chain from web"
                 files="`${Echo} ${files}` ${certpath}${ccnt}.root"
                 ccnt=`expr ${ccnt} + 1`
         done
-
-	# Fetch ldap cert
-	for loopServer in ${ldapserver}; do
-		${Echo} "QUIT" | openssl s_client -connect ${loopServer}:636 2>/dev/null | sed -ne '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p' >> ${certpath}/ldap-server.crt
-	done
 
 }
 
@@ -666,7 +732,6 @@ askForConfigurationData() {
 		if [ -z "${caslogurl}" ]; then
 			caslogurl=$(askString "CAS login URL" "Please input the Login URL to your CAS server (https://cas.xxx.yy/cas/login)" "${casurl}/login")
 		fi
-		
 	fi
 
 	if [ -z "${certOrg}" ]; then
@@ -713,7 +778,11 @@ askForConfigurationData() {
 	fi
 
 	if [ -z "${consentEnabled}" ]; then
-		subsearch=$(askYesNo "User consent" "Do you want to enable user consent?")
+		consentEnabled=$(askYesNo "User consent" "Do you want to enable user consent?")
+	fi
+
+	if [ -z "${ECPEnabled}" ]; then
+		ECPEnabled=$(askYesNo "Enable ECP" "Do you want to enable SAML2 ECP?")
 	fi
 
 
@@ -898,6 +967,30 @@ runShibbolethInstaller ()
 	       ldapDnFormat="uid=%s,${ldapbasedn}"
 	 fi
 
+#  Establish which authentication flows we have to configure
+
+idpAuthnFlowsDefault="Password"
+idpAuthnFlows=""
+
+if [ "${ECPEnabled}" = "y" -a "${type}" = "ldap" ]; then
+
+	idpAuthnFlows="${idpAuthnFlowsDefault}|RemoteUserInternal"
+	${Echo} "ECP Specific setting detected: idp.properties authn flows are now set to ldap and ECP: ${idpAuthnFlows}"
+
+elif [ "${ECPEnabled}" = "y" -a "${type}" = "cas" ]; then
+
+	idpAuthnFlows="Shibcas|RemoteUserInternal"
+	${Echo} "ECP Specific setting detected: idp.properties authn flows are now set to CAS and ECP: ${idpAuthnFlows}"
+
+else
+	
+	idpAuthnFlows="${idpAuthnFlowsDefault}"
+	${Echo} "idp.properties authn flows are set to the default use of password : ${idpAuthnFlows}"
+
+fi
+
+
+#  Auth flows part 2: what do we need to set for the installation?
 
 	if [ "${type}" = "ldap" ]; then
 
@@ -955,6 +1048,128 @@ EOM
 
 }
 
+
+enableStatusMonitoring() {
+
+	${Echo} "enableStatusMonitoring: Processing started"
+
+	# these are the defaults provided for Shibboleth
+	defaultMonitoringIPs="127.0.0.1/32 ::1/128"
+
+	# set the range to process but if empty, assign default range of localhost ipv4, ipv6
+	rangeToProcess="${iprangesallowed-$defaultMonitoringIPs}"
+	
+	${Echo} "enableStatusMonitoring: Enabling Status Monitoring from the following IP ranges ${rangeToProcess}"
+	declare -a myips=(${rangeToProcess})
+	# take range as a bash array, and then join with a comma, suppressing the last one
+	myRanges=`echo $(printf "'%s',"  "${myips[@]}")|sed 's/\(.*\),/\1/'`
+	
+	${Echo} "enableStatusMonitoring: Backing up original and applying our template to idp.home/conf/access-control.xml"
+
+	# make backup
+	cp /opt/shibboleth-idp/conf/access-control.xml /opt/shibboleth-idp/conf/access-control.xml.${fileBkpPostfix}
+	# Overlay the template file 
+	cp ${Spath}/prep/shibboleth/conf/access-control.xml.template /opt/shibboleth-idp/conf/access-control.xml
+
+	# Apply the ranges to idp.properties
+	${Echo} "enableStatusMonitoring: Appending Status Monitoring to idp.properties as idp.status.ipranges=${myRanges}"
+	echo "idp.status.ipranges=${myRanges}" >> /opt/shibboleth-idp/conf/idp.properties
+	
+	${Echo} "enableStatusMonitoring: Processing completed"
+
+
+
+}
+
+enableECPUpdateIdPWebXML ()
+{
+		${Echo} "ECP Step: Update the web.xml of the idp and rebuild"
+		${Echo} "ECP Step: make backup of web.xml"
+		webXML="web.xml"
+		webAppWEBINFOverride="/opt/shibboleth-idp/edit-webapp/WEB-INF"
+		webAppWEBINF="/opt/shibboleth-idp/webapp/WEB-INF"
+		# set to the overridden one provided it exists
+		tgtFileToUpdate="${webAppWEBINFOverride}/${webXML}"
+		tgtFileToUpdateBackup="${tgtFileToUpdate}.orig"
+
+		# expected entry conditions of this if-then-else and subsequent logic block:
+		# A. users and this code who touch web.xml will place file in Shibboleth edit-webapp location
+		# B. syntactically the file will have the closing XML tag on the very last line (no extra spaces)
+		# C. regardless of the use of CAS (which places the web.xml in the override location) we will pivot around overriding existing web.xml
+		# D. the function enableECPUpdateIdPWebXML is executed after the detection and manipulation of the items for CAS
+		# E.  the overriden web.xml is syntactically correct (we validate after processing but will not validate before)
+		if [ -s "${tgtFileToUpdate}" ]; then
+				${Echo} "ECP Step: CAS is your AuthN technique, web.xml being manipulated:${tgtFileToUpdate}"
+		else				
+				${Echo} "ECP Step: Regular Shibboleth AuthN detected, web.xml being cloned from webapp/WEB-INF into edit-webapp/WEB-INF"
+				cp ${webAppWEBINF}/${webXML} ${webAppWEBINFOverride}
+		fi
+
+		# make the backup
+		cp ${tgtFileToUpdate} ${tgtFileToUpdateBackup}
+
+
+		${Echo} "ECP Step: modify web.xml to enable ECP features of jetty container"
+			#  NOTE: The use of the greater than overwrites the file web.xml and we cat the fragment to complete it.
+			#  this is intentional			
+			head -n -1 ${tgtFileToUpdateBackup} > ${tgtFileToUpdate}
+			cat ${Spath}/prep/jetty/web.xml.fragment.template >> ${tgtFileToUpdate}
+		${Echo} "ECP Step: modifications done, attempting to validate web.xml as sane XML"
+
+		mytest=`/usr/bin/xmllint ${tgtFileToUpdate} > /dev/null 2>&1`
+		# $? is the most recent foreground pipeline exit status.  If it's ok, we did our job right.
+		isWebXMLOK=$?
+
+        if [ "${isWebXMLOK}" -ne 0 ]; then
+			${Echo} "ECP Step: RUH-OH! web.xml failed to validate via xmllint. saving to web.xml.failed and reverting to original"
+			cp ${tgtFileToUpdate} ${tgtFileToUpdate}.failed
+			cp ${tgtFileToUpdateBackup} ${tgtFileToUpdate}
+			${Echo} "ECP Step: RUH-OH! manual intervention required for ECP to work, but regular SSO operations should be ok."
+				
+        else
+			${Echo} "ECP Step: web.xml validates via xmllint, good to proceed."
+  
+        fi
+		${Echo} "ECP Step: Proceeding to rebuilding the war and deploying"
+ 		/opt/shibboleth-idp/bin/build.sh -Didp.target.dir=/opt/shibboleth-idp
+
+
+}
+
+enableECP ()
+
+{
+
+	# Based off of: https://wiki.shibboleth.net/confluence/display/IDP30/ECPConfiguration
+
+
+	if [ "${ECPEnabled}" = "y" ]; then
+	
+		${Echo} "ECP Enabled is yes, processing ECP steps"
+
+
+		${Echo} "ECP Step: Adding in JAAS connector in idp.home/conf/authn/jaas.config"
+		jaasConfigFile="/opt/shibboleth-idp/conf/authn/jaas.config"
+		
+		ldapUserFilter="${attr_filter}={user}"
+
+		cat ${Spath}/${prep}/jaas.config.template \
+			| sed -re "s#LdApUrI#${ldapurl}#;s/LdApBaSeDn/${ldapbasedn}/;s/SuBsEaRcH/${subsearch}/;s/LdApCrEdS/${ldapbinddn}/;s/LdApPaSsWoRd/${ldappass}/;s/LdApUsErFiLtEr/${ldapUserFilter}/;s/LdApSsL/${ldapSSL}/;s/LdApTlS/${ldapStartTLS}/" \
+			> ${jaasConfigFile}
+
+		${Echo} "ECP Step: ensure jetty:jetty owns idp.home/conf/authn/jaas.config"
+		chown jetty:jetty ${jaasConfigFile}
+
+
+		enableECPUpdateIdPWebXML
+
+	else
+				${Echo} "ECP Enabled is disabled, skipping  idp.home/conf/authn/jaas.config processing"
+
+	fi
+
+
+}
 
 configShibbolethSSLForLDAPJavaKeystore()
 
@@ -1041,30 +1256,20 @@ configContainerSSLServerKey()
                 if [ ! -d "/opt/shibboleth-idp/credentials/" ]; then
                         mkdir /opt/shibboleth-idp/credentials/
                 fi
+
+                ${Echo} "Self-signed webserver cert/key generated and placed in PKCS12 format in ${httpsP12} for port 443 usage"
                 openssl pkcs12 -export -in ${certpath}server.crt -inkey ${certpath}server.key -out ${httpsP12} -name container -passout pass:${httpspass}
+        
+    			${Echo} "Loading self-signed webserver cert: ${certpath}server.crt into ${javaCAcerts} to permit TLS port 443 connections"
+
+				svrSubject=`openssl x509 -subject -noout -in ${certpath}server.crt | awk -F= '{print $NF}'`
+                ${keytool} -import -noprompt -alias "${svrSubject}" -file ${certpath}server.crt -keystore ${javaCAcerts} -storepass changeit >> ${statusFile} 2>&1
+
         fi
 }
 
 
-patchShibbolethLDAPLoginConfigs ()
 
-{
-	# 	application server specific
-	if [ "${type}" = "ldap" ]; then
-		ldapServerStr=""
-		for i in `${Echo} ${ldapserver}`; do
-			ldapServerStr="`${Echo} ${ldapServerStr}` ldap://${i}"
-		done
-		ldapServerStr="`${Echo} ${ldapServerStr} | sed -re 's/^\s+//'`"
-
-		cat ${Spath}/${prep}/login.conf.diff.template \
-			| sed -re "s#LdApUrI#${ldapServerStr}#;s/LdApBaSeDn/${ldapbasedn}/;s/SuBsEaRcH/${subsearch}/" \
-			> ${Spath}/${prep}/login.conf.diff
-		files="`${Echo} ${files}` ${Spath}/${prep}/login.conf.diff"
-		patch /opt/shibboleth-idp/conf/login.config -i ${Spath}/${prep}/login.conf.diff >> ${statusFile} 2>&1
-	fi
-
-}
 
 configShibbolethFederationValidationKey ()
 
@@ -1111,7 +1316,7 @@ ${Echo} "Installing and adding daily crontab health checks"
 	${Echo} "Creating IdP Installer installation in ${idpInstallerBase}"
 	idpInstallerBin="${idpInstallerBase}/bin"
 	dailyTasks="${idpInstallerBin}/dailytasks.sh"
-	mkdir -p ${idpInstallerBin}
+	
 
 	${Echo} "adding dailytasks.sh to ${idpInstallerBin}"
 	# note that this file is not federation specific, but generic 
@@ -1270,7 +1475,107 @@ fi
 
 }
 
+jettySetupSetDefaults ()
+{
 
+ ${Echo} "jettySetup:jettySetupSetDefaults: Adding file /etc/default/jetty for java home and options"
+
+
+        # ensure Jetty has proper startup environment for Java for all platforms
+        jettyDefaults="/etc/default/jetty"
+        jEnvString="export JAVA_HOME=${JAVA_HOME}"
+ 		jEnvPathString="export PATH=${PATH}:${JAVA_HOME}/bin"
+ 		jEnvJavaDefOpts='export JAVA_OPTIONS="-Didp.home=/opt/shibboleth-idp -Xmx1024M"'
+ 		# suppressed -XX:+PrintGCDetails because it was too noisy
+
+		${Echo} "${jEnvString}" >> ${jettyDefaults}
+       	${Echo} "${jEnvPathString}" >> ${jettyDefaults}
+       	${Echo} "${jEnvJavaDefOpts}" >> ${jettyDefaults}
+       	
+        ${Echo} "jettySetup:jettySetupSetDefaults: Updated ${jettyDefaults} to add JAVA_HOME: ${JAVA_HOME} and java to PATH"
+        ${Echo} "jettySetup:jettySetupSetDefaults: Done adding file /etc/default/jetty for java home and options"
+ 
+}
+jettySetupManageCiphers() {
+
+      ${Echo} "jettySetup:jettySetupManageCiphers: Starting to fine tuning ciphers from /opt/jetty/jetty-base/etc/jetty.xml "
+
+
+		removeCiphers="TLS_RSA_WITH_AES_128_GCM_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA TLS_RSA_WITH_AES_256_CBC_SHA SSL_RSA_WITH_3DES_EDE_CBC_SHA"
+	for cipher in $removeCiphers; do
+		sed -i "/${cipher}/d" /opt/jetty/jetty-base/etc/jetty.xml
+	done
+
+	 ${Echo} "jettySetup:jettySetupManageCiphers: Ending fine tuning ciphers from /opt/jetty/jetty-base/etc/jetty.xml "
+
+
+}
+
+jettySetupPrepareBase()
+{
+	   ${Echo} "Preparing jetty-base from: ${jettyBasePath} to /opt/jetty/"
+
+    	cp -r ${jettyBasePath} /opt/jetty/
+
+    	# regardless of jetty version, ensure there's a log and tmp directory like there was in Shib 3.1.2
+    	# if it is idp v3.1.2, these steps are redundant and the chown on the files will happen in the setup
+
+        mkdir -p /opt/jetty/jetty-base/logs
+        mkdir -p /opt/jetty/jetty-base/tmp
+        
+        
+    
+
+}
+
+jettySetupEnableStartOnBoot ()
+{
+
+	${Echo} "$FUNCNAME: Enabling jetty startup on boot" >> ${statusFile} 2>&1
+
+	idpInstallerBin="${idpInstallerBase}/bin"
+	
+	
+	${Echo} "$FUNCNAME: Creating Jetty User " >> ${statusFile} 2>&1
+
+	useradd -d /opt/jetty -s /bin/bash -U jetty
+
+	${Echo} "$FUNCNAME: Creating symlink for legacy service start/stop  " >> ${statusFile} 2>&1
+        ln -s /opt/jetty/bin/jetty.sh /etc/init.d/jetty
+
+	${Echo} "$FUNCNAME: Enabling automatic Jetty Startup " >> ${statusFile} 2>&1
+
+        if [ "${dist}" == "ubuntu" ]; then
+		${Echo} "$FUNCNAME: Detected ubuntu service model, using update-rc.d to enable jetty" >> ${statusFile} 2>&1
+                update-rc.d jetty defaults
+	elif [ "${dist}" == "sles" ]; then
+		${Echo} "$FUNCNAME: Detected suse service model, using chkconfig to enable jetty" >> ${statusFile} 2>&1
+		chkconfig --add jetty
+		chkconfig jetty on
+	else
+		if [ ${redhatDist} = "7"  ]; then
+
+			${Echo} "$FUNCNAME: Detected newer service model, using systemd to enable jetty" >> ${statusFile} 2>&1
+	
+			${Echo} "$FUNCNAME: copying over systemd jetty.service file" >> ${statusFile} 2>&1
+			cp "${filesPath}/jetty.service.template" "${idpInstallerBin}/${idpIFilejettySystemdService}"
+
+			${Echo} "$FUNCNAME: copying IdP-Installer jetty.service file to systemd dir " >> ${statusFile} 2>&1
+			cp  "${idpInstallerBin}/${idpIFilejettySystemdService}" "${systemdHome}/${idpIFilejettySystemdService}"
+
+			systemctl daemon-reload
+			systemctl enable jetty.service
+
+		else
+			${Echo} "$FUNCNAME: Detected classic service model, using chkconfig to enable jetty" >> ${statusFile} 2>&1
+			chkconfig jetty on
+			
+		fi
+        fi
+
+
+
+}
 jettySetup() {
 
         #Installing a specific version of Jetty
@@ -1294,6 +1599,7 @@ jettySetup() {
 
         #jetty9File=`curl -s ${jettyBaseURL} | grep -oP "(?>)jetty-distribution.*tar.gz(?=&)"`
         
+        ${Echo} "$FUNCNAME: Starting Jetty servlet container setup" >> ${statusFile} 2>&1 
 
 		jetty9Path=`basename ${jetty9File}  .tar.gz`
 		jetty9URL="${jettyBaseURL}${jetty9File}"
@@ -1308,65 +1614,57 @@ jettySetup() {
                 	
         fi
 
-        # Manipulate Jetty configuration for the deployment
-        
+ 		${Echo} "$FUNCNAME: Manipulating Jetty config for our deployment" >> ${statusFile} 2>&1 
         cd /opt
         tar zxf ${downloadPath}/${jetty9File} >> ${statusFile} 2>&1
-        cp -r /opt/${shibDir}/jetty-base /opt/${jetty9Path}/
+        
+ 		${Echo} "$FUNCNAME: adding symlink for /opt/jetty" >> ${statusFile} 2>&1 
         ln -s /opt/${jetty9Path} /opt/jetty
+
+		jettySetupPrepareBase
+
+ 		${Echo} "$FUNCNAME: manipulating jetty.sh for proper settings" >> ${statusFile} 2>&1 
+
         sed -i 's/\# JETTY_HOME/JETTY_HOME=\/opt\/jetty/g' /opt/jetty/bin/jetty.sh
         sed -i 's/\# JETTY_USER/JETTY_USER=jetty/g' /opt/jetty/bin/jetty.sh
         sed -i 's/\# JETTY_BASE/JETTY_BASE=\/opt\/jetty\/jetty-base/g' /opt/jetty/bin/jetty.sh
         sed -i 's/TMPDIR:-\/tmp/TMPDIR:-\/opt\/jetty\/jetty-base\/tmp/g' /opt/jetty/bin/jetty.sh
-        useradd -d /opt/jetty -s /bin/bash -U jetty
-        ln -s /opt/jetty/bin/jetty.sh /etc/init.d/jetty
 
-        if [ "${dist}" != "ubuntu" ]; then
-                chkconfig jetty on
-	elif [ "${dist}" != "sles" ]; then
-                chkconfig jetty on
-        else
-                update-rc.d jetty defaults
-        fi
+ 		${Echo} "$FUNCNAME: manipulating jetty idp.ini for passphrases in jetty/jetty-base" >> ${statusFile} 2>&1 
+        cat ${filesPath}/idp.ini | sed -re "s#ShIbBKeyPaSs#${pass}#;s#HtTpSkEyPaSs#${httpspass}#" > /opt/jetty/jetty-base/start.d/idp.ini
+        
+        jettySetupEnableStartOnBoot
 
-        cat ${Spath}/files/idp.ini | sed -re "s#ShIbBKeyPaSs#${pass}#;s#HtTpSkEyPaSs#${httpspass}#" > /opt/jetty/jetty-base/start.d/idp.ini
 
-        # Setting ownership
-        chown jetty:jetty /opt/jetty/ -R
+		${Echo} "$FUNCNAME: applying ownership on key directories" >> ${statusFile} 2>&1 
+        chown -R jetty:jetty /opt/jetty/ 
         chown -R jetty:jetty /opt/shibboleth-idp/
 
-        # ensure Jetty has proper startup environment for Java for all platforms
-        jettyDefaults="/etc/default/jetty"
-        jEnvString="export JAVA_HOME=${JAVA_HOME}"
- 		jEnvPathString="export PATH=${PATH}:${JAVA_HOME}/bin"
-		${Echo} "${jEnvString}" >> ${jettyDefaults}
-       	${Echo} "${jEnvPathString}" >> ${jettyDefaults}
-        ${Echo} "Updated ${jettyDefaults} to add JAVA_HOME: ${JAVA_HOME} and java to PATH"
+        jettySetupSetDefaults
+        
+        jettySetupManageCiphers
 
-	removeCiphers="TLS_RSA_WITH_AES_128_GCM_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA256 TLS_RSA_WITH_AES_128_CBC_SHA TLS_RSA_WITH_AES_256_CBC_SHA SSL_RSA_WITH_3DES_EDE_CBC_SHA"
-	for cipher in $removeCiphers; do
-		sed -i "/${cipher}/d" /opt/jetty/jetty-base/etc/jetty.xml
-	done
+      ${Echo} "jettySetup: Ending Jetty servlet container setup"
+
 
 }
 
-
-restartJettyService ()
+applyIptablesSettings ()
 
 {
-        if [ -f /var/run/jetty.pid ]; then
-                service jetty stop
-        fi
-        service jetty start
-
+	${Echo} "$FUNCNAME: applying firewall rules and saving them to redirect 443 to 7443 " >> ${statusFile} 2>&1
         if [ "${dist}" == "sles" ]; then
-		slesPorts=`grep "^FW_SERVICES_EXT_TCP=" /etc/sysconfig/SuSEfirewall2 | cut -d\" -f2`
-		slesPorts="${slesPorts} 443 7443 8443"
-		echo "FW_SERVICES_EXT_TCP=\"${slesPorts}\"" >> /etc/sysconfig/SuSEfirewall2
+		SuSEfirewall2 open EXT TCP 443 7443 8443
 
-		slesRedir=`grep "^FW_REDIRECT=" /etc/sysconfig/SuSEfirewall2 | cut -d\" -f2`
-		slesRedir="${slesRedir} 0/0,0/0,tcp,443,8443"
-		echo "FW_REDIRECT=\"${slesRedir}\"" >> /etc/sysconfig/SuSEfirewall2
+		slesRedir=`grep "^FW_REDIRECT=" /etc/sysconfig/SuSEfirewall2 | cut -d\" -f2 | sed s/\n//`
+		slesStr="0/0,0/0,tcp,443,8443"
+		if [ ! -z "${slesRedir}" ]; then
+			slesRedir="${slesRedir} "
+		fi
+		if [ -z "`echo $slesRedir | grep ${slesStr}`" ]; then
+			slesRedir="${slesRedir}${slesStr}"
+			echo "FW_REDIRECT=\"${slesRedir}\"" >> /etc/sysconfig/SuSEfirewall2
+		fi
 
 		SuSEfirewall2
 	else
@@ -1374,17 +1672,36 @@ restartJettyService ()
 		iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 7443 -j ACCEPT
 		iptables -I INPUT -p tcp -m state --state NEW -m tcp --dport 8443 -j ACCEPT
 		iptables -t nat -A PREROUTING -p tcp --dport 443 -j REDIRECT --to-port 7443
+		iptables -t nat -I OUTPUT -p tcp -o lo --dport 443 -j REDIRECT --to-ports 7443
 	fi
 
         if [ "${dist}" == "centos" -o "${dist}" == "redhat" ]; then
 		iptables-save > /etc/sysconfig/iptables
-        elif [ "${dist}" == "ubuntu" ]; then
+		if [ ${redhatDist} = "7"  ]; then
+			${Echo} "$FUNCNAME: ensuring iptables is started upon reboot " >> ${statusFile} 2>&1 
+
+			systemctl enable iptables
+		fi
+	elif [ "${dist}" == "ubuntu" ]; then
 	 	iptables-save > /etc/iptables/rules.v4
 	fi
 
         if [ "${dist}" != "sles" ]; then
 		service iptables restart
 	fi
+
+}
+
+restartJettyService ()
+
+{
+
+	${Echo} "Restarting Jetty to ensure everything has taken effect"
+
+	if [ -f /var/run/jetty.pid ]; then
+		service jetty stop
+	fi
+	service jetty start
 
 }
 
@@ -1403,8 +1720,7 @@ applyFTICKS ()
 	# B. overlay new audit.xml, logback.xml so bean and technique is in place (make backup first)
 	overlayFiles="audit.xml logback.xml"
 	for i in ${overlayFiles}; do
-
-		cp /opt/shibboleth-idp/conf/${i} /opt/shibboleth-idp/conf/${i}.b4.replacement
+		cp /opt/shibboleth-idp/conf/${i} /opt/shibboleth-idp/conf/${i}.${fileBkpPostfix}
 		cp ${Spath}/files/${my_ctl_federation}/${i}.template /opt/shibboleth-idp/conf/${i}
 	done
 
@@ -1427,12 +1743,240 @@ applyFTICKS ()
 				${Echo} "applyFTICKS loghost: ${my_fticks_loghost_value}"
 
 
-	cp /opt/shibboleth-idp/conf/idp.properties /opt/shibboleth-idp/conf/idp.properties.b4.replacement
+	cp /opt/shibboleth-idp/conf/idp.properties /opt/shibboleth-idp/conf/idp.properties.${fileBkpPostfix}
 	echo "idp.fticks.federation=${my_ctl_federation}" >> /opt/shibboleth-idp/conf/idp.properties
 	echo "idp.fticks.salt=${fticksSalt}" >> /opt/shibboleth-idp/conf/idp.properties
 	echo "idp.fticks.loghost=${my_fticks_loghost_value}" >> /opt/shibboleth-idp/conf/idp.properties
 
 	${Echo} "applyFTICKS updates completed"
+}
+
+
+applyNameIDC14Settings ()
+
+{
+
+# https://wiki.shibboleth.net/confluence/display/IDP30/PersistentNameIDGenerationConfiguration
+# C14= Canonicalization BTW :)
+# Enables the saml-nameid.properties file for persistent identifiers and configures xml file for use
+# 
+	local failExt="proposedUpdate"
+	local tgtFile="${idpConfPath}/saml-nameid.properties"
+	local tgtFileBkp="${tgtFile}.${fileBkpPostfix}"
+	${Echo} "Applying NameID settings to ${tgtFile}" >> ${statusFile} 2>&1
+
+# Make a backup of our file
+	cp "${tgtFile}" "${tgtFileBkp}"
+
+# The following uncomments certain lines that ship with the file:
+# lines 8,9 activate the generator 
+${Echo} "Applying NameID settings:${tgtFile}: activate the nameID generator" >> ${statusFile} 2>&1
+
+	sed -i  "/idp.nameid.saml2.legacyGenerator/s/^#//" "${tgtFile}"
+	sed -i  "/idp.nameid.saml1.legacyGenerator/s/^#//" "${tgtFile}"
+
+#lines 22 and 26 respectively which we'll adjust in a moment
+${Echo} "Applying NameID settings:${tgtFile}: uncommenting sourceAttribute statement" >> ${statusFile} 2>&1
+
+	sed -i  "/idp.persistentId.sourceAttribute/s/^#//" "${tgtFile}"
+
+# this replaces the string for the attribute filter (uid/sAMAccountName) as the key element for the hash
+${Echo} "Applying NameID settings:${tgtFile}: replaces the string for the attribute filter with ${attr_filter}" >> ${statusFile} 2>&1
+
+	sed -i  "s/changethistosomethingreal/${attr_filter}/" "${tgtFile}"	
+
+# lines 26: uncomment the salt and replace it with the right thing
+# note that this is the same salt as the ePTId
+${Echo} "Applying NameID settings:${tgtFile}: uncomment and set the salt for hashing the value" >> ${statusFile} 2>&1
+
+	sed -i  "/idp.persistentId.salt/s/^#//" "${tgtFile}"
+	sed -i  "s/changethistosomethingrandom/${esalt}/" "${tgtFile}"	
+
+# line 31. Uncomment it to use the 'MyPersistentIdStore' it references elsewhere
+${Echo} "Applying NameID settings:${tgtFile}: uncommenting use of MyPersistentIdStore for DB " >> ${statusFile} 2>&1
+
+	sed -i  "/idp.persistentId.store/s/^#//" "${tgtFile}"
+
+${Echo} "Applying NameID settings:${tgtFile}: appending to file settings using StoredPersistentIdGenerator so DB is used to generate IDs" >> ${statusFile} 2>&1
+
+	${Echo} "# Appended by Idp-Installer to use the proper generator" >> "${tgtFile}"
+	${Echo} "idp.persistentId.generator = shibboleth.StoredPersistentIdGenerator" >> "${tgtFile}"
+
+
+	local tgtFilexml="${idpConfPath}/saml-nameid.xml"
+	local tgtFilexmlBkp="${tgtFilexml}.${fileBkpPostfix}"
+
+	local samlnameidTemplate="${Spath}/prep/shibboleth/conf/saml-nameid.xml.template"
+
+${Echo} "Applying NameID settings:${tgtFilexml}: making backup of file" >> ${statusFile} 2>&1
+
+# Make a backup of our file
+	cp "${tgtFilexml}" "${tgtFilexmlBkp}"
+
+
+# perform overlay of our template with necessary substitutions
+${Echo} "Applying NameID settings:${tgtFilexml}: perform our overlay from template file onto ${tgtFilexml}" >> ${statusFile} 2>&1
+
+	cat ${samlnameidTemplate} | sed -re "s#SqLpAsSwOrD#${epass}#" > "${tgtFilexml}"
+
+${Echo} "Applying NameID settings:${tgtFilexml}: verify successfull update" >> ${statusFile} 2>&1
+
+# verify that the updates proceeded at least to a non zero byte file result
+if [[ -s "${tgtFile}" && -s "${tgtFilexml}" ]]; then
+	${Echo} "${tgtFile} update complete" >> ${statusFile} 2>&1
+else
+	${Echo} "FAILED UPDATE: Issue detected with nameID files. The update to ${tgtFile} and ${tgtFilexml} are rolling back to originals" >> ${statusFile} 2>&1
+	${Echo} "Proposed updates for saml-nameid will be saved in the same directory with a ${failExt} extension" >> ${statusFile} 2>&1
+
+	# copy bad copies for latest investigation
+	cp "${tgtFilexml}" "${tgtFilexml}.${failExt}"
+	cp "${tgtFile}" "${tgtFile}.${failExt}"
+
+	# revert back to original for both 
+	cp "${tgtFilexmlBkp}" "${tgtFilexml}"
+	cp "${tgtFileBkp}" "${tgtFile}"
+
+	${Echo} "FAILED UPDATE: Files rolled back, installation will still proceed, but check installer status.log and IdP idp-process.log, idp-warn.log for issues post startup" >> ${statusFile} 2>&1
+
+fi
+${Echo} "Applying NameID settings:${tgtFilexml}: verify process complete" >> ${statusFile} 2>&1
+
+
+
+
+${Echo} "Applying NameID settings complete" >> ${statusFile} 2>&1
+	
+}
+
+prepareDatabase ()
+{
+	${Echo} "Preparing Mysql DB for storing identifiers"
+
+	# relies upon epass from script.messages.sh for the sqlpassword for userid 'shibboleth'
+
+	 	# grant sql access for shibboleth
+		# esalt generation moved to script.messages.sh to be used in more locations than just here
+		
+
+	cat ${Spath}/xml/${my_ctl_federation}/eptid.sql.template | sed -re "s#SqLpAsSwOrD#${epass}#" > ${Spath}/xml/${my_ctl_federation}/eptid.sql
+		files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.sql"
+
+		${Echo} "Create MySQL database and shibboleth user."
+		mysql -uroot -p"${mysqlPass}" < ${Spath}/xml/${my_ctl_federation}/eptid.sql
+		retval=$?
+		if [ "${retval}" -ne 0 ]; then
+			${Echo} "Failed to create EPTID database, take a look in the file '${Spath}/xml/${my_ctl_federation}/eptid.sql.template' and corect the issue." >> ${messages}
+			${Echo} "Password for the database user can be found in: /opt/shibboleth-idp/conf/attribute-resolver.xml" >> ${messages}
+		fi
+
+}
+
+
+
+applyGlobalXmlDbSettingsDependancies ()
+
+{
+	${Echo} "$FUNCNAME: adding libraries in edit-webapp/WEB-INF/lib supporting database connectivity" >> ${statusFile} 2>&1
+
+	local commonsDbcp2Jar="commons-dbcp2-${commonsDbcp2Ver}.jar"
+	local commonsPool2Jar="commons-pool2-${commonsPool2Ver}.jar"
+	
+	cp ${downloadPath}/${commonsDbcp2Jar} "${idpEditWebappLibDir}"
+	cp ${downloadPath}/${commonsPool2Jar} "${idpEditWebappLibDir}"
+
+	${Echo} "$FUNCNAME: applying jetty user and group ownership to  libraries in edit-webapp/WEB-INF/lib " >> ${statusFile} 2>&1
+		
+	chown -R jetty:jetty "${idpEditWebappLibDir}"
+
+	${Echo} "$FUNCNAME: completed" >> ${statusFile} 2>&1
+
+}
+
+applyGlobalXmlDbSettings ()
+
+{
+
+	local failExt="proposedUpdate"
+	local tgtFilexml="${idpConfPath}/global.xml"
+	local tgtFilexmlBkp="${tgtFilexml}.${fileBkpPostfix}"
+
+	local TemplateXml="${Spath}/prep/shibboleth/conf/global.xml.template"
+
+${Echo} "$FUNCNAME:Working on ${tgtFilexml}: making backup of file" >> ${statusFile} 2>&1
+
+# Make a backup of our file
+	cp "${tgtFilexml}" "${tgtFilexmlBkp}"
+
+
+# perform overlay of our template with necessary substitutions
+${Echo} "Working on ${tgtFilexml}: perform our overlay from template file onto ${tgtFilexml}" >> ${statusFile} 2>&1
+
+	cat ${TemplateXml} | sed -re "s#SqLpAsSwOrD#${epass}#" > "${tgtFilexml}"
+
+${Echo} "Working on ${tgtFilexml}: verify successfull update" >> ${statusFile} 2>&1
+
+# verify that the updates proceeded at least to a non zero byte file result
+if [ -s "${tgtFilexml}" ]; then
+	${Echo} "Working on ${tgtFilexml}: verification successful. Update completed." >> ${statusFile} 2>&1
+else
+	${Echo} "FAILED UPDATE: Issue detected with ${tgtFilexml} file. The update to ${tgtFilexml} are rolling back to originals" >> ${statusFile} 2>&1
+	${Echo} "Proposed updates will be saved in the same directory with a ${failExt} extension" >> ${statusFile} 2>&1
+
+	# copy bad copies for latest investigation
+	cp "${tgtFilexml}" "${tgtFilexml}.${failExt}"
+
+	# revert back to original for both 
+	cp "${tgtFilexmlBkp}" "${tgtFilexml}"
+
+	${Echo} "FAILED UPDATE: Files rolled back, installation will still proceed, but check installer status.log and IdP idp-process.log, idp-warn.log for issues post startup" >> ${statusFile} 2>&1
+
+fi
+
+${Echo} "Working on ${tgtFilexml}: verify process complete" >> ${statusFile} 2>&1
+
+applyGlobalXmlDbSettingsDependancies
+
+
+${Echo} "$FUNCNAME: Work on ${tgtFilexml} and related dependancies completed" >> ${statusFile} 2>&1
+
+
+}
+
+
+applyEptidSettings ()
+
+{
+	${Echo} "$FUNCNAME: Applying EPTID settings to attribute-resolver.xml" >> ${statusFile} 2>&1
+
+	${Echo} "$FUNCNAME: Applying EPTID settings to attribute-resolver.xml" >> ${statusFile} 2>&1
+
+	 	cat ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon.template \
+        | sed -re "s#SqLpAsSwOrD#${epass}#;s#Large_Random_Salt_Value#${esalt}#" \
+               > ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon
+       files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon"
+       
+      #REVIEW1 repStr='<!-- EPTID RESOLVER PLACEHOLDER -->'
+      #REVIEW1 sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.resolver" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+       repStr='<!-- EPTID ATTRIBUTE CONNECTOR PLACEHOLDER -->'
+       sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+#REVIEW1       repStr='<!-- EPTID PRINCIPAL CONNECTOR PLACEHOLDER -->'
+#REVIEW1       sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.princCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+	   repStr='<!-- EPTID FILTER PLACEHOLDER -->'
+       sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.filter" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
+      
+}
+applyLDAPSettings ()
+{
+		${Echo} "Patching config files"
+
+
+		repStr='<!-- LDAP CONNECTOR PLACEHOLDER -->'
+        sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/ldapconn.txt" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+
+
 }
 
 patchShibbolethConfigs ()
@@ -1467,52 +2011,32 @@ patchShibbolethConfigs ()
         fi
 
         if [ "${fticks}" != "n" ]; then
-              
               	# apply an enhanced application of the FTICKS functionality
-
-              	applyFTICKS
+				applyFTICKS
         fi
+
+        	# This loads the necessary schema for the database to prepare for
+        	#  eptid usage OR 
+        	# applyingNameIDC14Settings
+
+        	prepareDatabase
+
+        	applyGlobalXmlDbSettings
+
 
         if [ "${eptid}" != "n" ]; then
-                if [ -z "${epass}" ]; then
-                        epass=`${passGenCmd}`
-                fi
-		# grant sql access for shibboleth
-		esalt=`openssl rand -base64 36 2>/dev/null`
-		cat ${Spath}/xml/${my_ctl_federation}/eptid.sql.template | sed -re "s#SqLpAsSwOrD#${epass}#" > ${Spath}/xml/${my_ctl_federation}/eptid.sql
-		files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.sql"
 
-		${Echo} "Create MySQL database and shibboleth user."
-		mysql -uroot -p"${mysqlPass}" < ${Spath}/xml/${my_ctl_federation}/eptid.sql
-		retval=$?
-		if [ "${retval}" -ne 0 ]; then
-			${Echo} "Failed to create EPTID database, take a look in the file '${Spath}/xml/${my_ctl_federation}/eptid.sql.template' and corect the issue." >> ${messages}
-			${Echo} "Password for the database user can be found in: /opt/shibboleth-idp/conf/attribute-resolver.xml" >> ${messages}
-		fi
-
-                cat ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon.template \
-                        | sed -re "s#SqLpAsSwOrD#${epass}#;s#Large_Random_Salt_Value#${esalt}#" \
-                        > ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon
-                files="`${Echo} ${files}` ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon"
-
-                repStr='<!-- EPTID RESOLVER PLACEHOLDER -->'
-                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.resolver" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-                repStr='<!-- EPTID ATTRIBUTE CONNECTOR PLACEHOLDER -->'
-                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.attrCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-                repStr='<!-- EPTID PRINCIPAL CONNECTOR PLACEHOLDER -->'
-                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.princCon" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
-
-                repStr='<!-- EPTID FILTER PLACEHOLDER -->'
-                sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/eptid.add.filter" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-filter.xml
+        		applyEptidSettings
         fi
 
-        repStr='<!-- LDAP CONNECTOR PLACEHOLDER -->'
-        sed -i -e "/^${repStr}$/r ${Spath}/xml/${my_ctl_federation}/ldapconn.txt" -e "/^${repStr}$/d" /opt/shibboleth-idp/conf/attribute-resolver.xml
+        applyLDAPSettings
 
+        
 	echo "applying chown "
 	chmod o+r /opt/shibboleth-idp/conf/attribute-filter.xml
+
+	applyNameIDC14Settings
+
 
 }
 
@@ -1592,25 +2116,32 @@ overwriteKeystoreFiles ()
 	fi
 }
 
+makeInstallerHome()
+
+{
+	${Echo} "$FUNCNAME: Creating IdP-Installer support directories in ${idpInstallerBase} " >> ${statusFile} 2>&1
+
+	mkdir -p ${idpInstallerBase}
+	mkdir -p ${idpInstallerBin}
+
+}
 
 invokeShibbolethInstallProcessJetty9 ()
 {
+	${Echo} "$FUNCNAME: Beginning core installation process " >> ${statusFile} 2>&1
 
-        ### Begin of SAML IdP installation Process
-
-	containerDist="Jetty9"
-
-	installDependanciesForInstallation
-
+    
 	# check for installed IDP
 	setVarUpgradeType
 
 	setJavaHome
 
+	makeInstallerHome
+
 	# Override per federation
 	performStepsForShibbolethUpgradeIfRequired
 
-# 	check for backup file and use it if available
+	# 	check for backup file and use it if available
 	checkAndLoadBackupFile
 
 	if [ "${installer_interactive}" = "y" ]
@@ -1629,14 +2160,11 @@ invokeShibbolethInstallProcessJetty9 ()
 	
 	setJavaCACerts
 
-	setJavaCryptographyExtensions
-
-
 	generatePasswordsForSubsystems
 
 	patchFirewall
 
-	# installEPEL Sept 26 - no longer needed since Maven is installed via zip
+	
 
 	[[ "${upgrade}" -ne 1 ]] && fetchAndUnzipShibbolethIdP
 
@@ -1653,6 +2181,8 @@ invokeShibbolethInstallProcessJetty9 ()
 	# Override per federation
 	installCertificates
 
+	# process certificates for LDAP connections
+	fetchLDAPCertificates
 	configShibbolethSSLForLDAPJavaKeystore
 
 	# Override per federation
@@ -1661,11 +2191,15 @@ invokeShibbolethInstallProcessJetty9 ()
 	# Override per federation
 	configShibbolethFederationValidationKey
 
-        patchShibbolethConfigs
+	jettySetup
+
+	patchShibbolethConfigs
 
 	performPostUpgradeSteps
 
-        jettySetup
+	enableECP
+
+	enableStatusMonitoring
 
 	updateMachineTime
 
@@ -1678,6 +2212,8 @@ invokeShibbolethInstallProcessJetty9 ()
 # 	load the database dump if available
 	loadDatabaseDump
 
+	applyIptablesSettings
+
 	restartJettyService
 
 }
@@ -1688,11 +2224,10 @@ invokeShibbolethUpgradeProcess()
         if [ -a "/opt/${jetty9Path}/bin/jetty.sh" ]; then
                 echo "Jetty detected as installed"
         else
-
                 if [ ${dist} == "ubuntu" ]; then
                         apt-get -y remove --purge tomcat6 openjdk* default-jre java*
                 elif [ ${dist} == "sles" ]; then
-			zypper -n -l remove tomcat* openjdk* java*                        
+			zypper -n remove tomcat* openjdk* java*
                 else
                         yum -y remove tomcat* java*
                 fi
